k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-parser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-parser
  template:
    metadata:
      labels:
        app: movie-parser
    spec:
      containers:
        - name: movie-parser
          image: krblaz/movie_parser
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: movie-parser
spec:
  type: LoadBalancer
  ports:
    - port: 1234
      targetPort: server
  selector:
    app: movie-parser

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-parser-ingres
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movie-parser
                port:
                  number: 1234
